--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.16.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
